<resources>
    <string name="app_name">Demo app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="year_of_publication">Year of publication</string>
    <string name="isbn">ISBN</string>
    <string name="description">Description</string>
    <string name="write_some_description">Write some description...</string>
    <string name="save">Save</string>
    <string name="birthday">Birthday</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="cover">Cover</string>
    <string name="edit">Edit</string>
    <string name="menu_authors">Authors</string>
    <string name="empty"></string>
    <string name="required_field">Required field.</string>
    <string name="menu_books">Books</string>
</resources>
