<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="author"
            type="hu.korsosrichard.demoapp.models.Author" />
    </data>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.book.AuthorFormFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/form_horizontal_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_input_divider"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textCapWords"
                android:text="@{author.firstName}"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/error_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textAppearance="@style/MyTextAppearance.Error" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_input_divider"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textCapWords"
                android:text="@{author.lastName}"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/error_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textAppearance="@style/MyTextAppearance.Error" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_input_divider"
                android:text="@string/birthday" />

            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/birthday"
                android:inputType="none"
                android:text="@{author.birthdayString}"
                tools:ignore="Autofill" />

        </LinearLayout>

    </ScrollView>

</layout>